Fix search_results_list getting squished... ...if there were no results items >= 900px width.

--- a/public/css/search.scss
+++ b/public/css/search.scss
@@ -51,7 +51,7 @@ footer {
 }
 #content_center {
     /* grid-column: left-end / right-start; */
-    width: auto;
+    width: 100%;
     height: 100%;
 
     display: grid;
